--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,18 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # State Management
+  flutter_bloc: ^8.1.3
+
+  # Comparing Dart Objects
+  equatable: ^2.0.5
+
+  # Service Locator
+  get_it: ^7.6.4
+
+  dartz: ^0.10.1
+  freezed_annotation: ^2.4.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -46,6 +58,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
+  build_runner: ^2.4.6
+  freezed: ^2.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
