--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dev_dependencies:
 
   build_runner: ^2.4.6
   freezed: ^2.4.2
+  auto_route_generator: 7.3.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
