--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   auto_route: ^7.8.3
   data_connection_checker_tv: ^0.3.5-nullsafety
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
